fixes list icon bug

--- a/ui/controls/interface-overview.reel/interface-overview.html
+++ b/ui/controls/interface-overview.reel/interface-overview.html
@@ -16,7 +16,7 @@
                 "element": {"#": "interfaceIcon"}
             },
             "bindings": {
-                "moduleId": {"<-": "@owner.userInterfaceDescriptor.iconComponentModule.id"},
+                "moduleId": {"<-": "@owner.userInterfaceDescriptor.iconComponentModule.id || @owner.userInterfaceDescriptor.iconComponentModule['%']"},
                 "object": {"<-": "@owner.object"}
             }
         },
