cleans up layout spacing on calendar header

--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
@@ -177,7 +177,7 @@
                         <div data-montage-id="taskCategory" class="CalendarWidget-taskCategory"></div>
                     </div>
                 </div>
-                <div data-montage-id="taskFilter"></div>
+                <div data-montage-id="taskFilter" class="g-margin-left--half"></div>
                 <button data-montage-id="createTask" class="Button--create is-hidden">
                     <svg><use xlink:href="#i-circle-plus"/></svg>
                 </button>
