--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -251,7 +251,7 @@
 <body>
     <div data-montage-id="owner" class="ContainerCreator">
         <div data-montage-id="inspector">
-            <div data-montage-id="image" class="g-margin-bottom--double"></div>
+            <div data-montage-id="image" class="g-margin-bottom"></div>
             <div data-montage-id="name"></div>
             <div data-montage-id="dockerHost"></div>
 
@@ -259,11 +259,11 @@
                 <div data-montage-id="hostname"></div>
                 <div data-montage-id="host"></div>
                 <div data-montage-id="memoryLimit"></div>
-                <div data-montage-id="settingsTable" class="g-margin-bottom--double"></div>
-                <div data-montage-id="environmentsTable" class="g-margin-bottom--double"></div>
+                <div data-montage-id="settingsTable" class="g-margin-bottom"></div>
+                <div data-montage-id="environmentsTable" class="g-margin-bottom"></div>
                 <div data-montage-id="portsTable" class="g-margin-bottom"></div>
-                <div data-montage-id="exposePorts" class="g-margin-bottom--double"></div>
-                <div data-montage-id="volumesTable" class="g-margin-bottom--double"></div>
+                <div data-montage-id="exposePorts" class="g-margin-bottom"></div>
+                <div data-montage-id="volumesTable" class="g-margin-bottom"></div>
                 <div data-montage-id="interactive"></div>
                 <div data-montage-id="bridged"></div>
                 <div data-montage-id="bridgeAddress"></div>
