--- a/ui/sections/containers/inspectors/docker-image-pull.reel/docker-image-pull.html
+++ b/ui/sections/containers/inspectors/docker-image-pull.reel/docker-image-pull.html
@@ -62,7 +62,7 @@
 <body>
     <div data-montage-id="owner" class="DockerImagePull">
         <div data-montage-id="inspector">
-            <div data-montage-id="imageSearch"></div>
+            <div data-montage-id="imageSearch" class="g-margin-bottom"></div>
             <div data-montage-id="dockerHost"></div>
         </div>
     </div>
