--- a/ui/sections/system/inspectors/debug.reel/debug.html
+++ b/ui/sections/system/inspectors/debug.reel/debug.html
@@ -76,7 +76,7 @@
 <body>
     <div data-montage-id="owner" class="Debug">
         <div data-montage-id="inspector">
-            <div data-montage-id="downloadDebug" class="g-margin-bottom--half" id="downloadDebug"></div>
+            <div data-montage-id="downloadDebug" id="downloadDebug"></div>
             <div data-montage-id="noOperation" class="Updates-noOperation"></div>
             <div data-montage-id="enable_debug_kernel"></div>
             <div data-montage-id="uploadcrash"></div>
