adds bottom margin to ntpserver sync now button

--- a/ui/sections/system/inspectors/ntpserver.reel/ntpserver.html
+++ b/ui/sections/system/inspectors/ntpserver.reel/ntpserver.html
@@ -150,7 +150,7 @@
     <div data-montage-id="owner" class="Ntpserver">
         <div data-montage-id="inspector">
             <div data-montage-id="address"></div>
-            <div data-montage-id="syncNow"></div>
+            <div data-montage-id="syncNow" class="g-margin-bottom"></div>
             <div data-montage-id="pool"></div>
             <div data-montage-id="burst"></div>
             <div data-montage-id="iburst"></div>
