cleans up system preferences buttons

--- a/ui/sections/system/inspectors/preferences.reel/preferences.html
+++ b/ui/sections/system/inspectors/preferences.reel/preferences.html
@@ -173,8 +173,10 @@
         <div data-montage-id="inspector">
             <div data-montage-id="downloadConfig" class="g-margin-bottom--half" id="saveConfig"></div>
             <div data-montage-id="uploadConfig" class="g-margin-bottom--half"></div>
-            <div data-montage-id="applyConfig" class="g-margin-bottom--half"></div>
-            <div data-montage-id="factoryRestore" ></div>
+            <div class="g-margin-bottom">
+                <div data-montage-id="applyConfig"></div>
+                <div data-montage-id="factoryRestore" ></div>
+            </div>
             <div data-montage-id="noOperation" class="Updates-noOperation"></div>
             <div data-montage-id="hostname"></div>
             <div data-montage-id="description"></div>
