Allow to scroll the file browser within the volume table. Ticket: #19972

--- a/ui/controls/tree-view.reel/current-node.reel/current-node.html
+++ b/ui/controls/tree-view.reel/current-node.reel/current-node.html
@@ -36,6 +36,9 @@
                 "element": {"#": "scrollview"},
                 "overflow": "scrollY",
                 "hasFixedFooter": false
+            },
+            "bindings": {
+                "needsDraw": {"<-": "@owner.isExpanded"}
             }
         },
         "childNodes": {
