--- a/ui/controls/tree-view.reel/tree-view.html
+++ b/ui/controls/tree-view.reel/tree-view.html
@@ -32,6 +32,7 @@
                 "element": {"#": "currentNode"}
             },
             "bindings": {
+                "isExpanded": {"<-": "@owner.isExpanded"},
                 "controller": {"<-": "@owner.controller"},
                 "selectedPath": {"<->": "@owner.selectedPath"},
                 "selectedNode": {"<->": "@owner.selectedNode"}
