Set Container Creation point to /mnt (#364)
Ticket: #19750

--- a/ui/sections/containers/controls/table-volume.reel/table-row-volume.reel/table-row-volume.html
+++ b/ui/sections/containers/controls/table-volume.reel/table-row-volume.reel/table-row-volume.html
@@ -17,7 +17,7 @@
             "prototype": "core/controller/filesystem-tree-controller",
             "properties": {
                 "canListFiles": true,
-                "root": "/"
+                "root": "/mnt"
             },
             "bindings": {
                 "service": {"<-": "@owner.application.filesystemService"}
