FIX-19826 Scrolling in Container
Extra DIV elements were added to the layout thus breaking the flex properties to allow for scrolling. Flex properties were added to the extra elements.

--- a/ui/sections/containers/inspectors/container-editor.reel/container-editor.html
+++ b/ui/sections/containers/inspectors/container-editor.reel/container-editor.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="container-editor.css">
     <script type="text/montage-serialization">
     {
         "owner": {
@@ -312,14 +313,14 @@
             <div data-montage-id="host"></div>
             <div data-montage-id="hostname"></div>
             <div data-montage-id="memoryLimit"></div>
-            <div data-montage-id="environment">
+            <div data-montage-id="environment" class="g-margin-bottom">
                 <div></div>
             </div>
-            <div data-montage-id="ports">
+            <div data-montage-id="ports" class="g-margin-bottom">
                 <div></div>
             </div>
             <div data-montage-id="exposePorts"></div>
-            <div data-montage-id="volumes">
+            <div data-montage-id="volumes" class="g-margin-bottom">
                 <div></div>
             </div>
             <div data-montage-id="command"></div>
