--- a/ui/sections/containers/inspectors/container.reel/container.html
+++ b/ui/sections/containers/inspectors/container.reel/container.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="container.css">
     <script type="text/montage-serialization">
     {
         "owner": {
@@ -25,7 +26,7 @@
 </head>
 <body>
 <div data-montage-id="owner" class="Container">
-    <div data-montage-id="containerInspector">
+    <div data-montage-id="containerInspector" class="Container-inspector">
     </div>
 </div>
 </body>
