Alerts Predicate Table Layout Cleanup
Removed superfluous elements to allow for correct table layout.
BUG: #19828

--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
@@ -138,20 +138,12 @@
     <div data-montage-id="owner" class="TableRowPredicate Table-cells">
         <div><div data-montage-id="property"></div></div>
         <div data-montage-id="operatorSubstitution">
-            <div data-arg="class">
-                <div><div data-montage-id="classOperators"></div></div>
-            </div>
-            <div data-arg="severity">
-                <div><div data-montage-id="severityOperators"></div></div>
-            </div>
+            <div data-arg="class" data-montage-id="classOperators"></div>
+            <div data-arg="severity" data-montage-id="severityOperators"></div>
         </div>
         <div data-montage-id="valueSubstitution">
-            <div data-arg="class">
-                <div><div data-montage-id="classValues" class="Select-value"></div></div>
-            </div>
-            <div data-arg="severity">
-                <div><div data-montage-id="severityValues" class="Select-value"></div></div>
-            </div>
+            <div data-arg="class" data-montage-id="classValues" class="Select-value"></div>
+            <div data-arg="severity" data-montage-id="severityValues" class="Select-value"></div>
         </div>
     </div>
 </body>
