hides detached volumes title

--- a/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
+++ b/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
@@ -23,7 +23,7 @@
             "properties": {
                 "element": {"#": "detachedVolumes"},
                 "title": "Detached volumes",
-                "displayTitle": true
+                "emptyMessage": "There are no available volumes to import."
             },
             "bindings": {
                 "object": {"<-": "@owner.detachedVolumes"}
