--- a/ui/controls/topology.reel/vdev.reel/vdev.html
+++ b/ui/controls/topology.reel/vdev.reel/vdev.html
@@ -48,7 +48,7 @@
                 "vDevComponent": {"@": "owner"}
             },
             "bindings": {
-                "classList.has('hide')": {"<-": "!@owner.canRemove"}
+                "classList.has('hide')": {"<-": "!@owner.object._isNew"}
             }
         }
     }
