--- a/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
+++ b/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
@@ -126,7 +126,8 @@
                 "topology": {"@": "topology"}
             },
             "bindings": {
-                "disks": {"<-": "@owner.availableDisks"}
+                "disks": {"<-": "@owner.availableDisks"},
+                "locked": {"<-": "!!@topologizer.lockDisks"}
             }
         }
     }
