Make the sidebar obey user set date/time options (still some things I plan to do with this)
Ticket: #19666

--- a/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
+++ b/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
@@ -12,14 +12,14 @@
         },
         "dateConverter": {
             "prototype": "montage/core/converter/date-converter",
-            "properties": {
-                "pattern": "M/d/yy"
+            "bindings": {
+                "pattern": {"<-": "@owner.datePattern"}
             }
         },
         "timeConverter": {
             "prototype": "montage/core/converter/date-converter",
-            "properties": {
-                "pattern": "T"
+            "bindings": {
+                "pattern": {"<-": "@owner.timePattern"}
             }
         },
         "hostStatus": {
