Cleanup obsolete code

--- a/ui/sections/network/inspectors/overview.reel/interface-overview-item.reel/interface-overview-item.html
+++ b/ui/sections/network/inspectors/overview.reel/interface-overview-item.reel/interface-overview-item.html
@@ -27,7 +27,7 @@
                 "element": {"#": "interfaceName"}
             },
             "bindings": {
-                "value": {"<-": "@owner.object.path(@owner.object.Type.constructor.userInterfaceDescriptor.nameExpression)"}
+                "value": {"<-": "@owner.object.path(@owner.userInterfaceDescriptor.nameExpression)"}
             }
         },
         "firstAddress": {
