UPDATED: fix operator

--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
@@ -49,8 +49,8 @@
                         "value": null
                     },
                     {
-                        "label": "'=='",
-                        "value": "=="
+                        "label": "'='",
+                        "value": "="
                     },
                     {
                         "label": "'!='",
