--- a/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate-creation.reel/crypto-certificate-creation.html
+++ b/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate-creation.reel/crypto-certificate-creation.html
@@ -37,7 +37,7 @@
                 "converter": {"@": "optionsConverter"}
             },
             "bindings": {
-                "options" : {"<-": "[{name:'Self Signed'}].concat(@owner.certificates.filter{type=='CA_INTERNAL' || type=='CA_INTERMEDIATE' || type=='CA_EXISTING' })"},
+                "options" : {"<-": "[{name:@owner.SELF_SIGNED}].concat(@owner.certificates.filter{type=='CA_INTERNAL' || type=='CA_INTERMEDIATE' || type=='CA_EXISTING' })"},
                 "selectedValue": {"<->": "@owner.object.signing_ca_name"}
             }
         },
