Make sure we can’t edit a vdev component when its mode is read only.

--- a/ui/controls/topology.reel/vdev.reel/vdev.html
+++ b/ui/controls/topology.reel/vdev.reel/vdev.html
@@ -48,7 +48,7 @@
                 "vDevComponent": {"@": "owner"}
             },
             "bindings": {
-                "classList.has('hide')": {"<-": "!@owner.object._isNew"}
+                "classList.has('hide')": {"<-": "!@owner.object._isNew || !@owner.editable"}
             }
         }
     }
