Set new ui for volume wizard. Ticket: #19849

--- a/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
+++ b/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
@@ -102,7 +102,7 @@
                 "element": {"#": "topologizer"}
             },
             "bindings": {
-                "topology": {"<-": "@owner.object.topology"},
+                "topology": {"<->": "@owner.object.topology"},
                 "disks": {"<-": "@owner.availableDisks"},
                 "controller": {"<-": "@owner._sectionService"}
             }
