Make sure the vdev type is disabled when its mode is read only.

--- a/ui/controls/topology.reel/vdev.reel/vdev.html
+++ b/ui/controls/topology.reel/vdev.reel/vdev.html
@@ -23,7 +23,7 @@
             "bindings": {
                 "options": {"<-": "@owner.vdevTypesOptions.map{value}"},
                 "selectedValue": {"<->": "@owner.object.type"},
-                "disabled": {"<-": "@owner.vdevTypesOptions.length < 2"}
+                "disabled": {"<-": "@owner.vdevTypesOptions.length < 2 || !@owner.editable"}
             }
         },
         "controller": {
