hide create button for extra entries in section root

--- a/ui/controls/section-root.reel/section-root.html
+++ b/ui/controls/section-root.reel/section-root.html
@@ -41,7 +41,8 @@
         "extraEntries": {
             "prototype": "ui/controls/viewer.reel",
             "properties": {
-                "element": {"#": "extraEntries"}
+                "element": {"#": "extraEntries"},
+                "hideCreateButton": true
             },
             "bindings": {
                 "object": {"<-": "@owner.object.extraEntries"},
