--- a/ui/dashboard/notifications.reel/notification.reel/task-notification.reel/task-notification.html
+++ b/ui/dashboard/notifications.reel/notification.reel/task-notification.reel/task-notification.html
@@ -17,7 +17,8 @@
             "bindings": {
                 "classList.has('has-error')": {"<-": "@owner.object.state == 'FAILED'"},
                 "classList.has('has-warning')": {"<-": "@owner.object.warnings.length > 0"},
-                "classList.has('has-success')": {"<-": "@owner.object.state == 'FINISHED'"}
+                "classList.has('has-success')": {"<-": "@owner.object.state == 'FINISHED'"},
+                "classList.has('hide')": {"<-": "@owner.isExpired"}
             }
         },
         "taskSummary": {
