Fix share target mandatoriness

--- a/ui/sections/storage/inspectors/share.reel/share.html
+++ b/ui/sections/storage/inspectors/share.reel/share.html
@@ -16,7 +16,7 @@
                     "DIRECTORY":    {"@": "directoryTreeController"},
                     "FILE":         {"@": "fileTreeController"}
                 },
-                "targetTreeview": {"@": "target"}
+                "targetTreeview": {"@": "target_path"}
             },
             "bindings": {
                 "volumePath": {"<-": "'/mnt/' + @owner._volume.id"}
@@ -26,7 +26,7 @@
             "prototype": "core/controller/dataset-tree-controller",
             "bindings": {
                 "service": {"<-": "@owner.application.dataService"},
-                "root": {"<-": "@owner._volume.id"}
+                "root": {"<-": "@owner.object._volume.id"}
             }
         },
         "directoryTreeController": {
@@ -122,10 +122,10 @@
                 "value": {"<->": "@owner.object.description"}
             }
         },
-        "target": {
+        "target_path": {
             "prototype": "ui/controls/field-treeview.reel",
             "properties": {
-                "element": {"#": "target"},
+                "element": {"#": "target_path"},
                 "validationPath": "target_path"
             },
             "bindings": {
@@ -182,7 +182,7 @@
             <div data-montage-id="enabled" class="wizard-is-hidden"></div>
             <div data-montage-id="serviceEnabled" class="wizard-is-hidden"></div>
             <div data-montage-id="name"></div>
-            <div data-montage-id="target" class="wizard-is-hidden"></div>
+            <div data-montage-id="target_path" class="wizard-is-hidden"></div>
             <div data-montage-id="description" class="wizard-is-hidden"></div>
             <div data-montage-id="shareTypePlaceHolder"></div>
         </div>
