Fix default parent in dataset creation

--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
@@ -41,7 +41,7 @@
             "prototype": "core/controller/dataset-tree-controller",
             "bindings": {
                 "service": {"<-": "@owner.application.dataService"},
-                "root": {"<-": "@owner.volume.id"}
+                "root": {"<-": "@owner.object._volume.id"}
             }
         },
         "nameSubstitution": {
